finalized the chatpdf app (without payment integration)

--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.24",
+    "@ai-sdk/openai": "^0.0.34",
     "@aws-sdk/client-s3": "^3.600.0",
     "@aws-sdk/credential-provider-env": "^3.598.0",
     "@clerk/nextjs": "^5.1.6",
+    "@huggingface/inference": "^2.7.0",
     "@langchain/community": "^0.2.14",
     "@neondatabase/serverless": "^0.9.3",
+    "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^2.2.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.45.1",
+    "@types/md5": "^2.3.5",
+    "ai": "^3.2.13",
     "aws-sdk": "^2.1648.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -26,12 +32,16 @@
     "drizzle-orm": "^0.31.2",
     "langchain": "^0.2.7",
     "lucide-react": "^0.396.0",
+    "md5": "^2.3.0",
     "next": "14.2.4",
+    "openai": "^4.52.1",
+    "openai-edge": "^1.2.2",
     "pdf-parse": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^16.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
